restructure project files; schemes, true sim benchmarks and processing as modules and common utils folder/module

--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
+    "import os, sys\n",
     "import shutil\n",
     "from datetime import datetime, timedelta\n",
+    "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "parentdir = os.path.dirname(currentdir)\n",
+    "sys.path.append(parentdir)\n",
     "\n",
+    "import pandas as pd\n",
+    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
+    "from utils.helpers.save_trajectory import save_current_trajectory\n",
+    "from utils.helpers.metafile_handler import create_meta_files\n",
     "\n",
     "# Declaring variables and constants for this sheet\n",
     "\n",
@@ -28,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,27 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "save_current_trajectory() missing 1 required positional argument: 'split_coordinate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Check if trajectory is empty\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(trajectory) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 30\u001b[0m     \u001b[43msave_current_trajectory\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[43m        \u001b[49m\u001b[43mOUTPUT_FOLDER\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mOUTPUT_FOLDER\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     32\u001b[0m \u001b[43m        \u001b[49m\u001b[43mfile_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mname_counter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtrajectory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrajectory\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m     counter \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     36\u001b[0m     name_counter \u001b[38;5;241m=\u001b[39m increment_alphabetical(name_counter)\n",
-      "\u001b[0;31mTypeError\u001b[0m: save_current_trajectory() missing 1 required positional argument: 'split_coordinate'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell to extract traces that are of a minimum length of N locations and within a given distance window\n",
-    "from utils.alphabetical import increment_alphabetical\n",
-    "from utils.save_trajectory import save_current_trajectory\n",
-    "from utils.metafile_handler import create_meta_files, get_meta_files, delete_meta_files\n",
-    "\n",
     "counter = 0\n",
     "name_counter = \"AAA\"\n",
     "\n",
