--- a/processing/porto_clean_data.ipynb
+++ b/processing/porto_clean_data.ipynb
@@ -10,21 +10,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing necessary modules\n",
-    "\n",
     "import pandas as pd\n",
-    "import os\n",
+    "import os, sys\n",
     "import shutil\n",
     "from haversine import haversine, Unit\n",
     "\n",
+    "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "parentdir = os.path.dirname(currentdir)\n",
+    "sys.path.append(parentdir)\n",
+    "\n",
+    "import pandas as pd\n",
+    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
+    "from utils.helpers.save_trajectory import save_current_trajectory\n",
+    "from utils.helpers.metafile_handler import create_meta_files\n",
+    "\n",
+    "\n",
     "# Helper function to compute distance between a list of coordinates (Trajectory distance)\n",
     "# Haversine distance used\n",
-    "\n",
-    "\n",
     "def calculate_trajectory_distance(positions: list[tuple[float]]) -> float:\n",
     "    \"\"\"\n",
     "    Calculate the trajectory distance for a trajectory\n",
@@ -44,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,10 +123,6 @@
    ],
    "source": [
     "# Read the data, clean it and insert to cleaned csv file\n",
-    "\n",
-    "from utils.alphabetical import increment_alphabetical\n",
-    "from utils.save_trajectory import save_current_trajectory\n",
-    "\n",
     "\n",
     "cleaned_trajectories = []\n",
     "counter = 0\n",
@@ -207,12 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.metafile_handler import create_meta_files, get_meta_files, delete_meta_files\n",
-    "\n",
     "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"R_\", create_test_set=True)"
    ]
   }
