--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -19,21 +19,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing necessary modules\n",
     "from haversine import haversine, Unit\n",
     "import shutil\n",
-    "import os\n",
     "from datetime import datetime, timedelta\n",
     "import numpy as np\n",
     "import re\n",
-    "import math\n",
+    "import sys\n",
+    "import os\n",
     "import pandas as pd\n",
     "\n",
-    "import sys\n",
+    "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "parentdir = os.path.dirname(currentdir)\n",
+    "sys.path.append(parentdir)\n",
     "\n",
-    "# setting path\n",
-    "sys.path.append(\"../utils\")\n",
-    "# from tqdm import tqdm\n",
+    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
+    "from utils.helpers.save_trajectory import save_current_trajectory\n",
+    "from utils.helpers.metafile_handler import create_meta_files\n",
     "\n",
     "\n",
     "def calculate_trajectory_distance(positions: list[tuple[float]]) -> float:\n",
@@ -201,11 +202,6 @@
    ],
    "source": [
     "# Cell to extract traces that are of a minimum length of N locations and within a given distance window\n",
-    "from utils.alphabetical import increment_alphabetical\n",
-    "from utils.save_trajectory import save_current_trajectory\n",
-    "from utils.metafile_handler import create_meta_files, get_meta_files, delete_meta_files\n",
-    "\n",
-    "\n",
     "counter = 0\n",
     "name_counter = \"AAA\"\n",
     "\n",
