--- a/schemes/lsh_disk.ipynb
+++ b/schemes/lsh_disk.ipynb
@@ -1,27 +1,42 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Importing nescessary modules\n",
-    "import os\n",
-    "import shutil\n",
+    "# Notebook for the creation of the disk lsh hashes for both datasets\n",
     "\n",
-    "from schemes.lsh_grid import GridLSH\n",
-    "\n",
-    "from processing.utils import metafile_handler as mfh\n",
-    "\n",
-    "from schemes.experiments import hashing\n",
-    "\n",
-    "from multiprocessing import Pool"
+    "Sheet that converts the extracted data from the data/chosen_data folder to hashes that will be stored in data/hashed_data/disk\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing nescessary modules\n",
+    "import os, sys\n",
+    "import shutil\n",
+    "import timeit as ti\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "parentdir = os.path.dirname(currentdir)\n",
+    "sys.path.append(parentdir)\n",
+    "\n",
+    "\n",
+    "from helpers.lsh_disk import DiskLSH\n",
+    "from utils.helpers import metafile_handler as mfh\n",
+    "from schemes.experiments import hashing\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +44,13 @@
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
-    "OUTPUT_FOLDER_PORTO = \"hashed_data/grid/porto/\"\n",
-    "OUTPUT_FOLDER_ROME = \"hashed_data/grid/rome/\"\n",
-    "OUTPUT_FOLDER_KOLUMBUS = \"hashed_data/grid/kolumbus/\"\n",
+    "OUTPUT_FOLDER_PORTO = \"../hashed_data/disk/porto/\"\n",
+    "OUTPUT_FOLDER_ROME = \"../hashed_data/disk/rome/\"\n",
+    "OUTPUT_FOLDER_KOLUMBUS = \"../hashed_data/disk/kolumbus/\"\n",
     "\n",
-    "PORTO_DATA = \"dataset/porto/output/\"\n",
-    "ROME_DATA = \"dataset/rome/output/\"\n",
-    "KOLUMBUS_DATA = \"dataset/kolumbus/output/\"\n",
+    "PORTO_DATA = \"../dataset/porto/output/\"\n",
+    "ROME_DATA = \"../dataset/rome/output/\"\n",
+    "KOLUMBUS_DATA = \"../dataset/kolumbus/output/\"\n",
     "\n",
     "P_MAX_LON = -8.57\n",
     "P_MIN_LON = -8.66\n",
@@ -57,12 +72,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rome LSH Grid\n"
+    "# Rome LSH Disk\n",
+    "\n",
+    "Continuing with the rome set\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,24 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Grid hash object for Rome and saves them to output folder. Also copies the metafiles denoting the different datasets\n",
+    "# Creating a disk based LSH hashing object over rome\n",
     "\n",
-    "resolution = 1.2  # km\n",
-    "layers = 5\n",
-    "meta_file = \"dataset/rome/output/META-100.TXT\"\n",
+    "layers = 4\n",
+    "diameter = 1.5\n",
+    "num_disks = 50\n",
+    "meta_file = \"../dataset/rome/output/META-100.TXT\"\n",
     "\n",
-    "GridRome = GridLSH(\n",
-    "    \"Rome G1\",\n",
+    "DiskRome = DiskLSH(\n",
+    "    \"Rome D1\",\n",
     "    R_MIN_LAT,\n",
     "    R_MAX_LAT,\n",
     "    R_MIN_LON,\n",
     "    R_MAX_LON,\n",
-    "    resolution,\n",
+    "    num_disks,\n",
     "    layers,\n",
+    "    diameter,\n",
     "    meta_file,\n",
     "    ROME_DATA,\n",
     ")"
@@ -107,22 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate the hashes and save them to output folder\n",
+    "# Generating the hashes and storing them in output folder along with the meta-files\n",
+    "hashes = DiskRome.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
-    "hashes = GridRome.compute_dataset_hashes()\n",
-    "\n",
-    "# Saving the hashes to files\n",
     "for key in hashes:\n",
     "    with open(f\"{OUTPUT_FOLDER_ROME}/{key}.txt\", \"w\") as file:\n",
     "        for hash in hashes[key]:\n",
     "            file.write(\"%s\\n\" % hash)\n",
     "        file.close()\n",
     "\n",
-    "# Copying the meta_files:\n",
+    "# Copying meta_files as well\n",
     "meta_files = mfh.get_meta_files(ROME_DATA)\n",
     "\n",
     "for filename in meta_files:\n",
@@ -133,12 +150,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Porto LSH Grid\n"
+    "# Porto LSH Disk\n",
+    "\n",
+    "Beginning with the porto set\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,24 +177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Grid LSH objec for Porto\n",
+    "# Create a disk-based LSH object over Porto\n",
     "\n",
-    "resolution = 1.6  # km\n",
-    "layers = 5\n",
-    "meta_file = \"dataset/porto/output/META-100.TXT\"\n",
+    "layers = 4\n",
+    "diameter = 1.5\n",
+    "num_disks = 50\n",
+    "meta_file = \"../dataset/porto/output/META-100.TXT\"\n",
     "\n",
-    "GridPorto = GridLSH(\n",
-    "    \"Porto G1\",\n",
+    "DiskPorto = DiskLSH(\n",
+    "    \"Porto D1\",\n",
     "    P_MIN_LAT,\n",
     "    P_MAX_LAT,\n",
     "    P_MIN_LON,\n",
     "    P_MAX_LON,\n",
-    "    resolution,\n",
+    "    num_disks,\n",
     "    layers,\n",
+    "    diameter,\n",
     "    meta_file,\n",
     "    PORTO_DATA,\n",
     ")"
@@ -183,22 +204,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating the hashes and saving them to output folder\n",
+    "# Generating the disk-based LSH objects hashes and saving them to file\n",
     "\n",
-    "hashes = GridPorto.compute_dataset_hashes()\n",
+    "hashes = DiskPorto.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
-    "# Saving the hashes to files\n",
     "for key in hashes:\n",
+    "    # print(key)\n",
     "    with open(f\"{OUTPUT_FOLDER_PORTO}/{key}.txt\", \"w\") as file:\n",
     "        for hash in hashes[key]:\n",
+    "            # print(hash)\n",
     "            file.write(\"%s\\n\" % hash)\n",
-    "        file.close()\n",
+    "        file.close\n",
     "\n",
-    "# Copying the meta_files\n",
+    "# Copying meta_files as well\n",
     "meta_files = mfh.get_meta_files(PORTO_DATA)\n",
     "\n",
     "for filename in meta_files:\n",
@@ -209,16 +231,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kolumbus LSH Grid\n"
+    "# Kolumbus LSH Disk\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to clear the chosen files in the PORTO folder\n",
+    "# Run this cell to clear the chosen files in the ROME folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
     "    for filename in os.listdir(OUTPUT_FOLDER_KOLUMBUS):\n",
@@ -234,24 +256,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Grid LSH objec for Porto\n",
+    "# Creating a disk based LSH hashing object over Kolumbus\n",
     "\n",
-    "resolution = 1.6  # km\n",
-    "layers = 5\n",
-    "meta_file = \"dataset/kolumbus/output/META-100.TXT\"\n",
+    "layers = 4\n",
+    "diameter = 1.5\n",
+    "num_disks = 50\n",
+    "meta_file = \"../dataset/kolumbus/output/META-100.TXT\"\n",
     "\n",
-    "GridKolumbus = GridLSH(\n",
-    "    \"Kolumbus G1\",\n",
+    "DiskKolumbus = DiskLSH(\n",
+    "    \"Kolumbus D1\",\n",
     "    K_MIN_LAT,\n",
     "    K_MAX_LAT,\n",
     "    K_MIN_LON,\n",
     "    K_MAX_LON,\n",
-    "    resolution,\n",
+    "    num_disks,\n",
     "    layers,\n",
+    "    diameter,\n",
     "    meta_file,\n",
     "    KOLUMBUS_DATA,\n",
     ")"
@@ -259,26 +283,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating the hashes and saving them to output folder\n",
+    "# Generating the hashes and storing them in output folder along with the meta-files\n",
+    "hashes = DiskKolumbus.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
-    "hashes = GridKolumbus.compute_dataset_hashes()\n",
-    "\n",
-    "# Saving the hashes to files\n",
     "for key in hashes:\n",
     "    with open(f\"{OUTPUT_FOLDER_KOLUMBUS}/{key}.txt\", \"w\") as file:\n",
     "        for hash in hashes[key]:\n",
     "            file.write(\"%s\\n\" % hash)\n",
     "        file.close()\n",
     "\n",
-    "# Copying the meta_files\n",
+    "# Copying meta_files as well\n",
     "meta_files = mfh.get_meta_files(KOLUMBUS_DATA)\n",
     "\n",
     "for filename in meta_files:\n",
     "    shutil.copy(KOLUMBUS_DATA + filename, OUTPUT_FOLDER_KOLUMBUS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Measuring run-times of hash generation\n",
+    "\n",
+    "The cells below are created to measure the time-efficiency of the hash computation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Cell for measrung DiskLSH hash generation times for all methods in both datasets - using coordiante hashes\n",
+    "# import pandas as pd\n",
+    "# from itertools import chain\n",
+    "\n",
+    "# output_folder = \"schemes/experiments/runtimes/\"\n",
+    "# file_name = \"hashing_runtimes_disk_lsh.csv\"\n",
+    "\n",
+    "# hashing_map = {\n",
+    "#     \"porto_naive\" : hashing.fun_wrapper_p_naive,\n",
+    "#     \"porto_quadrants\" : hashing.fun_wrapper_p_quadrants,\n",
+    "#     \"porto_kd_tree\" : hashing.fun_wrapper_p_KD_tree,\n",
+    "#     \"rome_naive\" : hashing.fun_wrapper_r_naive,\n",
+    "#     \"rome_quadrants\" : hashing.fun_wrapper_r_quadrants,\n",
+    "#     \"rome_kd_tree\" : hashing.fun_wrapper_r_KD_tree\n",
+    "# }\n",
+    "\n",
+    "# config = {\n",
+    "#     \"porto\" : [1000, 60, 4, 2.2],\n",
+    "#     # \"rome\" : [1000, 50, 5, 1.6]\n",
+    "\n",
+    "# }\n",
+    "\n",
+    "# runs = 10\n",
+    "\n",
+    "# df = pd.DataFrame(columns=[f\"Run_{run+1}\" for run in range(runs)])\n",
+    "\n",
+    "# for key in hashing_map.keys():\n",
+    "#     with Pool() as pool:\n",
+    "#         result = pool.map(hashing_map[key], [config[key.split(\"_\")[0]] for _ in range(runs)])\n",
+    "#         df.loc[key] = list(chain.from_iterable(result))\n",
+    "\n",
+    "# df.to_csv(os.path.join(output_folder, file_name))"
    ]
   }
  ],
