generate grid hash similarity for porto and probably make it easy to add grid-kol and grid-rome plus disk based sim

--- a/benchmarks/dtw_benchmark.ipynb
+++ b/benchmarks/dtw_benchmark.ipynb
@@ -2,27 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Importing nescessary modules\n",
-        "import os, sys\n",
+        "from utils.similarity_measures import dtw\n",
+        "from utils.helpers import file_handler as fh\n",
+        "from utils.helpers import metafile_handler as mfh\n",
+        "import os\n",
+        "import sys\n",
         "import shutil\n",
         "import pandas as pd\n",
         "\n",
         "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
         "parentdir = os.path.dirname(currentdir)\n",
-        "sys.path.append(parentdir)\n",
-        "\n",
-        "from utils.helpers import metafile_handler as mfh\n",
-        "from utils.helpers import file_handler as fh\n",
-        "from utils.similarity_measures import dtw"
+        "sys.path.append(parentdir)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -111,7 +111,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# DTW similarities for Rome"
+        "# DTW similarities for Rome\n"
       ]
     },
     {
@@ -141,12 +141,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# DTW similarities for Porto"
+        "# DTW similarities for Porto\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -178,7 +178,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# DTW similarities for Kolumbus"
+        "# DTW similarities for Kolumbus\n"
       ]
     },
     {
@@ -214,7 +214,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Time measurement"
+        "# Time measurement\n"
       ]
     },
     {
@@ -341,7 +341,7 @@
         "# Measuring the computation times of true similarities\n",
         "\n",
         "runs = 10\n",
-        "data_sets = range(500,501,100)\n",
+        "data_sets = range(500, 501, 100)\n",
         "output_folder = \"../benchmarks/similarities/timing\"\n",
         "file_name = \"similarity_runtimes_true_dtw_rome_500.csv\"\n",
         "\n",
@@ -358,8 +358,13 @@
         "\n",
         "df.to_csv(os.path.join(output_folder, file_name))\n",
         "df\n",
-        "of = pd.read_csv(\"../benchmarks/similarities/rome/similarity_runtimes_true_dtw_rome.csv\", index_col=0)\n",
-        "f1 = pd.read_csv(\"../benchmarks/similarities/rome/similarity_runtimes_true_dtw_rome_500.csv\", index_col=0)\n",
+        "of = pd.read_csv(\n",
+        "    \"../benchmarks/similarities/rome/similarity_runtimes_true_dtw_rome.csv\", index_col=0\n",
+        ")\n",
+        "f1 = pd.read_csv(\n",
+        "    \"../benchmarks/similarities/rome/similarity_runtimes_true_dtw_rome_500.csv\",\n",
+        "    index_col=0,\n",
+        ")\n",
         "\n",
         "# of[\"500\"] = f1[\"500\"]\n",
         "# of[\"700\"] = f1[\"700\"]\n",
