--- a/schemes/lsh_grid.ipynb
+++ b/schemes/lsh_grid.ipynb
@@ -17,8 +17,7 @@
     "\n",
     "from helpers.lsh_grid import GridLSH\n",
     "from utils.helpers import metafile_handler as mfh\n",
-    "from schemes.experiments import hashing\n",
-    "\n"
+    "from schemes.experiments import hashing"
    ]
   },
   {
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +167,7 @@
     "\n",
     "resolution = 1.6  # km\n",
     "layers = 5\n",
-    "meta_file = \"../dataset/porto/output/META-100.TXT\"\n",
+    "meta_file = \"../dataset/porto/output/META-1000.TXT\"\n",
     "\n",
     "GridPorto = GridLSH(\n",
     "    \"Porto G1\",\n",
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
