change prefix for output files and trajectories

--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "from haversine import haversine, Unit\n",
     "import shutil\n",
     "from datetime import datetime, timedelta\n",
@@ -31,11 +32,9 @@
     "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
     "parentdir = os.path.dirname(currentdir)\n",
     "sys.path.append(parentdir)\n",
-    "\n",
-    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
-    "from utils.helpers.save_trajectory import save_current_trajectory\n",
     "from utils.helpers.metafile_handler import create_meta_files\n",
-    "\n",
+    "from utils.helpers.save_trajectory import save_current_trajectory\n",
+    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
     "\n",
     "def calculate_trajectory_distance(positions: list[tuple[float]]) -> float:\n",
     "    \"\"\"\n",
@@ -239,11 +238,10 @@
     "    try:\n",
     "        # Checking whether time between two consecutive points are greater than a given const\n",
     "        t_last = datetime.strptime(\n",
-    "            last_timestamp[0: last_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
+    "            last_timestamp[0 : last_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
     "        )\n",
     "        t_current = datetime.strptime(\n",
-    "            current_timestamp[0: current_timestamp.index(\n",
-    "                \".\")], \"%Y-%m-%d %H:%M:%S\"\n",
+    "            current_timestamp[0 : current_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
     "        )\n",
     "\n",
     "    except:\n",
@@ -275,8 +273,7 @@
     "            old_loc = trajectory[0]\n",
     "            for loc in trajectory:\n",
     "                if old_loc != loc:\n",
-    "                    distance = calculate_trajectory_distance(\n",
-    "                        [(old_loc), (loc)])\n",
+    "                    distance = calculate_trajectory_distance([(old_loc), (loc)])\n",
     "\n",
     "                    # If distance between two consecutive coordinates are too great:\n",
     "                    if distance > MAX_DIST_BETWEEN_LOCATIONS:\n",
@@ -292,8 +289,7 @@
     "                # print(trajectory)\n",
     "                # coordinates_lists = [[lat, lon] for lat, lon in trajectory]\n",
     "                cleaned_trajectories.append(\n",
-    "                    [current_driver_id, current_timestamp,\n",
-    "                        [float(lat), float(lon)]]\n",
+    "                    [current_driver_id, current_timestamp, [float(lat), float(lon)]]\n",
     "                )\n",
     "                # if LOG:\n",
     "                #     print(\n",
@@ -304,6 +300,7 @@
     "                    OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
     "                    file_name=name_counter,\n",
     "                    trajectory=trajectory,\n",
+    "                    trajectory_file_prefix=\"R\",\n",
     "                )\n",
     "                # if LOG:\n",
     "\n",
