--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -10,6 +10,7 @@
     "import os, sys\n",
     "import shutil\n",
     "from datetime import datetime, timedelta\n",
+    "\n",
     "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
     "parentdir = os.path.dirname(currentdir)\n",
     "sys.path.append(parentdir)\n",
@@ -72,7 +73,8 @@
     "# Reading the dataset into a dataframe\n",
     "\n",
     "raw_df = pd.read_csv(\n",
-    "    RAW_DATA_FILE, usecols=[\"serviceJourney\", \"recordedAtTime\", \"longitude\", \"latitude\"]\n",
+    "    RAW_DATA_FILE, usecols=[\"serviceJourney\",\n",
+    "                            \"recordedAtTime\", \"longitude\", \"latitude\"]\n",
     ")\n",
     "# Filtering the data\n",
     "filtered_df = raw_df[\n",
@@ -143,6 +145,7 @@
     "                OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
     "                file_name=name_counter,\n",
     "                trajectory=trajectory,\n",
+    "                trajectory_file_prefix=\"K\",\n",
     "            )\n",
     "            counter += 1\n",
     "            name_counter = increment_alphabetical(name_counter)\n",
@@ -219,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
