--- a/processing/porto_clean_data.ipynb
+++ b/processing/porto_clean_data.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing necessary modules\n",
     "import pandas as pd\n",
-    "import os, sys\n",
+    "import os\n",
+    "import sys\n",
     "import shutil\n",
     "from haversine import haversine, Unit\n",
     "\n",
@@ -24,10 +25,9 @@
     "parentdir = os.path.dirname(currentdir)\n",
     "sys.path.append(parentdir)\n",
     "\n",
-    "import pandas as pd\n",
-    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
-    "from utils.helpers.save_trajectory import save_current_trajectory\n",
     "from utils.helpers.metafile_handler import create_meta_files\n",
+    "from utils.helpers.save_trajectory import save_current_trajectory\n",
+    "from utils.helpers.alphabetical_number import increment_alphabetical\n",
     "\n",
     "\n",
     "# Helper function to compute distance between a list of coordinates (Trajectory distance)\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,14 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of cleaned trajectories written to file: 3000\n"
+     "ename": "TypeError",
+     "evalue": "save_current_trajectory() got an unexpected keyword argument 'trajectory_file_prefix'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 57\u001b[0m\n\u001b[1;32m     55\u001b[0m     lon, lat \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mfloat\u001b[39m, coordinate\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m)))\n\u001b[1;32m     56\u001b[0m     trajectory\u001b[38;5;241m.\u001b[39mappend((lat, lon))\n\u001b[0;32m---> 57\u001b[0m \u001b[43msave_current_trajectory\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     58\u001b[0m \u001b[43m    \u001b[49m\u001b[43mOUTPUT_FOLDER\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mOUTPUT_FOLDER\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     59\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfile_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mname_counter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     60\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrajectory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrajectory\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     61\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrajectory_file_prefix\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mP\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     62\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     64\u001b[0m counter \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     65\u001b[0m name_counter \u001b[38;5;241m=\u001b[39m increment_alphabetical(name_counter)\n",
+      "\u001b[0;31mTypeError\u001b[0m: save_current_trajectory() got an unexpected keyword argument 'trajectory_file_prefix'"
      ]
     }
    ],
@@ -161,8 +165,7 @@
     "        # Traces with noisy data:\n",
     "        if last_coordinate != coordinate:\n",
     "            last_lon, last_lat = list(map(float, last_coordinate.split(\",\")))\n",
-    "            distance = calculate_trajectory_distance(\n",
-    "                [(last_lat, last_lon), (lat, lon)])\n",
+    "            distance = calculate_trajectory_distance([(last_lat, last_lon), (lat, lon)])\n",
     "\n",
     "            # If distance between two consecutive coordinates are too great:\n",
     "            if distance > MAX_DIST_BETWEEN_COORDINATES:\n",
@@ -184,6 +187,7 @@
     "            OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
     "            file_name=name_counter,\n",
     "            trajectory=trajectory,\n",
+    "            trajectory_file_prefix=\"P\",\n",
     "        )\n",
     "\n",
     "        counter += 1\n",
@@ -212,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"R_\", create_test_set=True)"
+    "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"R_\", create_test_set=True)"
    ]
   }
  ],
