--- a/benchmarks/dtw_benchmark.ipynb
+++ b/benchmarks/dtw_benchmark.ipynb
@@ -2,27 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Importing nescessary modules\n",
-        "from utils.similarity_measures import dtw\n",
-        "from utils.helpers import file_handler as fh\n",
-        "from utils.helpers import metafile_handler as mfh\n",
-        "import os\n",
-        "import sys\n",
+        "import os, sys\n",
         "import shutil\n",
         "import pandas as pd\n",
         "\n",
         "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
         "parentdir = os.path.dirname(currentdir)\n",
-        "sys.path.append(parentdir)"
+        "sys.path.append(parentdir)\n",
+        "\n",
+        "from utils.similarity_measures import dtw\n",
+        "from utils.helpers import file_handler as fh\n",
+        "from utils.helpers import metafile_handler as mfh"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
