cleanup unused code and fix comments

--- a/benchmarks/dtw_benchmark.ipynb
+++ b/benchmarks/dtw_benchmark.ipynb
@@ -62,15 +62,7 @@
         "        elif os.path.isdir(file_path):\n",
         "            shutil.rmtree(file_path)\n",
         "    except Exception as e:\n",
-        "        print(\"Failed to remove %s. Reason: %s\" % (file_path, e))\n",
-        "\n",
-        "\n",
-        "def romeSet(file_size: int) -> str:\n",
-        "    return f\"../dataset/rome/output/META-{file_size}.txt\"\n",
-        "\n",
-        "\n",
-        "def portoSet(file_size: int) -> str:\n",
-        "    return f\"../dataset/porto/output/META-{file_size}.txt\""
+        "        print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
       ]
     },
     {
@@ -219,6 +211,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def romeSet(file_size: int) -> str:\n",
+        "    return f\"../dataset/rome/output/META-{file_size}.txt\"\n",
+        "\n",
+        "\n",
+        "def portoSet(file_size: int) -> str:\n",
+        "    return f\"../dataset/porto/output/META-{file_size}.txt\""
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 26,
       "metadata": {},
       "outputs": [],
@@ -245,7 +251,7 @@
         "\n",
         "    with Pool() as pool:\n",
         "        result = pool.map(sim[measure], [[trajectories, 1, 1]\n",
-        "                          for _ in range(10)])\n",
+        "                          for _ in range(parallell_jobs)])\n",
         "    return result"
       ]
     },
