--- a/benchmarks/frechet_benchmark.ipynb
+++ b/benchmarks/frechet_benchmark.ipynb
@@ -73,6 +73,7 @@
     "# Using Cython Frechet, to speed things up\n",
     "\n",
     "\n",
+    "# NOTE - Is not in use due to extensive computation time for non parallel version.\n",
     "def generate_frechet_similarities(\n",
     "    data_folder: str, meta_file: str, file_name: str, similarities_output_folder: str\n",
     "):\n",
@@ -268,6 +269,7 @@
     }
    ],
    "source": [
+    "# Test set\n",
     "generate_parallell_frechet_similarities(\n",
     "    DATA_ROME,\n",
     "    TEST_SET_ROME,\n",
@@ -351,6 +353,7 @@
     }
    ],
    "source": [
+    "# Test set\n",
     "generate_parallell_frechet_similarities(\n",
     "    DATA_PORTO,\n",
     "    TEST_SET_PORTO,\n",
@@ -417,14 +420,14 @@
     }
    ],
    "source": [
-    "# Frechet similarities for Kolumbus\n",
+    "# NOTE - Not computed for frechet test set or full set due to extensive computation time\n",
+    "# Test set\n",
     "generate_parallell_frechet_similarities(\n",
     "    DATA_KOLUMBUS,\n",
     "    TEST_SET_KOLUMBUS,\n",
     "    FRECHET_FILENAME_TEST_KOLUMBUS,\n",
     "    SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS,\n",
     ")\n",
-    "\n",
     "# # Full set\n",
     "# generate_parallell_frechet_similarities(\n",
     "#     DATA_KOLUMBUS, FULL_SET_KOLUMBUS, FRECHET_FILENAME_KOLUMBUS, SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS\n",
