--- a/schemes/lsh_disk.ipynb
+++ b/schemes/lsh_disk.ipynb
@@ -213,10 +213,8 @@
     "hashes = DiskPorto.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
     "for key in hashes:\n",
-    "    # print(key)\n",
     "    with open(f\"{OUTPUT_FOLDER_PORTO}/{key}.txt\", \"w\") as file:\n",
     "        for hash in hashes[key]:\n",
-    "            # print(hash)\n",
     "            file.write(\"%s\\n\" % hash)\n",
     "        file.close\n",
     "\n",
@@ -369,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
