--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,25 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from constants import ROME_OUTPUT_FOLDER, R_MAX_LAT, R_MAX_LON, R_MIN_LAT, R_MIN_LON, R_MIN_LON\n",
     "# Declaring variables and constants for this sheet\n",
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
-    "OUTPUT_FOLDER = \"../dataset/rome/output\"\n",
+    "OUTPUT_FOLDER = f\"../{ROME_OUTPUT_FOLDER}\"\n",
     "RAW_DATA_FILE = \"../dataset/rome/rome_raw.txt\"\n",
-    "CLEAN_DATA_FILE = \"../dataset/rome/rome.csv\"\n",
+    "OUTPUT_DATA_FILE = \"../dataset/rome/rome.csv\"\n",
     "\n",
     "\n",
     "LOG = False  # Set to true for printing/debug during data extraction\n",
-    "\n",
-    "MAX_LON = 12.53\n",
-    "MIN_LON = 12.44\n",
-    "MAX_LAT = 41.93\n",
-    "MIN_LAT = 41.88\n",
     "\n",
     "MIN_LEN = 40  # Perhaps change this one\n",
     "MIN_DIST = 4  # In km\n",
@@ -86,13 +82,13 @@
     "\n",
     "NUMBER_OF_TRACES = 100000\n",
     "\n",
-    "X = calculate_trajectory_distance([(MIN_LAT, MIN_LON), (MAX_LAT, MIN_LON)])\n",
-    "Y = calculate_trajectory_distance([(MIN_LAT, MIN_LON), (MIN_LAT, MAX_LON)])"
+    "X = calculate_trajectory_distance([(R_MIN_LAT, R_MIN_LON), (R_MAX_LAT, R_MIN_LON)])\n",
+    "Y = calculate_trajectory_distance([(R_MIN_LAT, R_MIN_LON), (R_MIN_LAT, R_MAX_LON)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,8 +224,8 @@
     "        continue\n",
     "\n",
     "    # Location outside bounded rectangle, go to next row\n",
-    "    if (not (MIN_LON <= float(lon) <= MAX_LON)) or (\n",
-    "        not (MIN_LAT <= float(lat) <= MAX_LAT)\n",
+    "    if (not (R_MIN_LON <= float(lon) <= R_MAX_LON)) or (\n",
+    "        not (R_MIN_LAT <= float(lat) <= R_MAX_LAT)\n",
     "    ):\n",
     "        if LOG:\n",
     "            print(\"Location outside bounded rectangle: \", lat, lon)\n",
@@ -329,7 +325,7 @@
     "cleaned_df = pd.DataFrame(\n",
     "    cleaned_trajectories, columns=[\"index\", \"timestamp\", \"location\"]\n",
     ")\n",
-    "cleaned_df.to_csv(CLEAN_DATA_FILE, index=False)\n",
+    "cleaned_df.to_csv(OUTPUT_DATA_FILE, index=False)\n",
     "\n",
     "print(f\"Created {counter} trajectories\")"
    ]
