--- a/schemes/lsh_grid.ipynb
+++ b/schemes/lsh_grid.ipynb
@@ -26,6 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from constants import P_MAX_LON, P_MIN_LON,P_MAX_LAT,P_MIN_LAT,R_MAX_LON,R_MIN_LON,R_MAX_LAT,R_MIN_LAT,K_MAX_LON,K_MIN_LON,K_MAX_LAT,K_MIN_LAT, PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, KOLUMBUS_OUTPUT_FOLDER\n",
     "# Declaring global variables:\n",
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
@@ -34,24 +35,9 @@
     "OUTPUT_FOLDER_ROME = \"../hashed_data/grid/rome/\"\n",
     "OUTPUT_FOLDER_KOLUMBUS = \"../hashed_data/grid/kolumbus/\"\n",
     "\n",
-    "PORTO_DATA = \"../dataset/porto/output/\"\n",
-    "ROME_DATA = \"../dataset/rome/output/\"\n",
-    "KOLUMBUS_DATA = \"../dataset/kolumbus/output/\"\n",
-    "\n",
-    "P_MAX_LON = -8.57\n",
-    "P_MIN_LON = -8.66\n",
-    "P_MAX_LAT = 41.19\n",
-    "P_MIN_LAT = 41.14\n",
-    "\n",
-    "R_MAX_LON = 12.53\n",
-    "R_MIN_LON = 12.44\n",
-    "R_MAX_LAT = 41.93\n",
-    "R_MIN_LAT = 41.88\n",
-    "\n",
-    "K_MAX_LON = 5.80\n",
-    "K_MIN_LON = 5.70\n",
-    "K_MAX_LAT = 59.10\n",
-    "K_MIN_LAT = 58.85"
+    "PORTO_DATA = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
+    "ROME_DATA = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
+    "KOLUMBUS_DATA = f\"../{KOLUMBUS_OUTPUT_FOLDER}/\""
    ]
   },
   {
@@ -71,6 +57,8 @@
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
     "    for filename in os.listdir(OUTPUT_FOLDER_ROME):\n",
+    "        if filename.startswith(\".gitkeep\"):\n",
+    "            continue\n",
     "        file_path = os.path.join(OUTPUT_FOLDER_ROME, filename)\n",
     "        try:\n",
     "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
@@ -91,7 +79,7 @@
     "\n",
     "resolution = 1.2  # km\n",
     "layers = 5\n",
-    "meta_file = \"../dataset/rome/output/META-100.TXT\"\n",
+    "meta_file = f\"../{ROME_OUTPUT_FOLDER}/META-100.txt\"\n",
     "\n",
     "GridRome = GridLSH(\n",
     "    \"Rome G1\",\n",
@@ -139,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +135,8 @@
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
     "    for filename in os.listdir(OUTPUT_FOLDER_PORTO):\n",
+    "        if filename.startswith(\".gitkeep\"):\n",
+    "            continue\n",
     "        file_path = os.path.join(OUTPUT_FOLDER_PORTO, filename)\n",
     "        try:\n",
     "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
@@ -159,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +157,7 @@
     "\n",
     "resolution = 1.6  # km\n",
     "layers = 5\n",
-    "meta_file = \"../dataset/porto/output/META-1000.TXT\"\n",
+    "meta_file = f\"../{PORTO_OUTPUT_FOLDER}/META-1000.txt\"\n",
     "\n",
     "GridPorto = GridLSH(\n",
     "    \"Porto G1\",\n",
@@ -184,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,6 +213,8 @@
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
     "    for filename in os.listdir(OUTPUT_FOLDER_KOLUMBUS):\n",
+    "        if filename.startswith(\".gitkeep\"):\n",
+    "            continue\n",
     "        file_path = os.path.join(OUTPUT_FOLDER_KOLUMBUS, filename)\n",
     "        try:\n",
     "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
@@ -243,7 +235,7 @@
     "\n",
     "resolution = 1.6  # km\n",
     "layers = 5\n",
-    "meta_file = \"../dataset/kolumbus/output/META-100.TXT\"\n",
+    "meta_file = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-100.txt\"\n",
     "\n",
     "GridKolumbus = GridLSH(\n",
     "    \"Kolumbus G1\",\n",
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
