--- a/benchmarks/frechet_benchmark.ipynb
+++ b/benchmarks/frechet_benchmark.ipynb
@@ -25,24 +25,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_ROME = \"../dataset/rome/output/\"\n",
-    "TEST_SET_ROME = \"../dataset/rome/output/META-50.txt\"\n",
-    "FULL_SET_ROME = \"../dataset/rome/output/META-1000.txt\"\n",
-    "SIMILARITIES_OUTPUT_FOLDER_ROME = \"../benchmarks/similarities/rome/\"\n",
-    "FRECHET_FILENAME_ROME = \"rome-frechet-fullset.csv\"\n",
-    "FRECHET_FILENAME_TEST_ROME = \"rome-frechet-testset.csv\"\n",
+    "from constants import PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, KOLUMBUS_OUTPUT_FOLDER, SIMILARITIES_OUTPUT_FOLDER_PORTO, SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
+    "DATA_ROME = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
+    "TEST_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-50.txt\"\n",
+    "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-1000.txt\"\n",
+    "SIMILARITIES_OUTPUT_FOLDER_ROME = f\"../{SIMILARITIES_OUTPUT_FOLDER_ROME}/\"\n",
+    "DTW_FILENAME_ROME = \"rome-dtw-fullset.csv\"\n",
+    "DTW_FILENAME_TEST_ROME = \"rome-dtw-testset.csv\"\n",
     "\n",
-    "DATA_PORTO = \"../dataset/porto/output/\"\n",
-    "TEST_SET_PORTO = \"../dataset/porto/output/META-50.txt\"\n",
-    "FULL_SET_PORTO = \"../dataset/porto/output/META-1000.txt\"\n",
-    "SIMILARITIES_OUTPUT_FOLDER_PORTO = \"../benchmarks/similarities/porto/\"\n",
-    "FRECHET_FILENAME_PORTO = \"porto-frechet-fullset.csv\"\n",
-    "FRECHET_FILENAME_TEST_PORTO = \"porto-frechet-testset.csv\"\n",
+    "DATA_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
+    "TEST_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-50.txt\"\n",
+    "FULL_SET_PORTO = f\"../{PORTO_OUTPUT_FOLDER}/META-1000.txt\"\n",
+    "SIMILARITIES_OUTPUT_FOLDER_PORTO = f\"../{SIMILARITIES_OUTPUT_FOLDER_PORTO}/\"\n",
+    "DTW_FILENAME_PORTO = \"porto-dtw-fullset.csv\"\n",
+    "DTW_FILENAME_TEST_PORTO = \"porto-dtw-testset.csv\"\n",
     "\n",
-    "DATA_KOLUMBUS = \"../dataset/kolumbus/output/\"\n",
-    "TEST_SET_KOLUMBUS = \"../dataset/kolumbus/output/META-50.txt\"\n",
-    "FULL_SET_KOLUMBUS = \"../dataset/kolumbus/output/META-1000.txt\"\n",
-    "SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS = \"../benchmarks/similarities/kolumbus/\"\n",
+    "DATA_KOLUMBUS = f\"../{KOLUMBUS_OUTPUT_FOLDER}/\"\n",
+    "TEST_SET_KOLUMBUS = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-50.txt\"\n",
+    "FULL_SET_KOLUMBUS = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-1000.txt\"\n",
+    "SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS = f\"../{SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS}/\"\n",
     "FRECHET_FILENAME_KOLUMBUS = \"kolumbus-frechet-fullset.csv\"\n",
     "FRECHET_FILENAME_TEST_KOLUMBUS = \"kolumbus-frechet-testset.csv\""
    ]
