--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -19,12 +19,14 @@
     "from utils.helpers.save_trajectory import save_current_trajectory\n",
     "from utils.helpers.metafile_handler import create_meta_files\n",
     "\n",
+    "from constants import K_MAX_LON, K_MAX_LAT, K_MIN_LAT, K_MIN_LON, KOLUMBUS_OUTPUT_FOLDER \n",
+    "\n",
     "# Declaring variables and constants for this sheet\n",
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
     "LOG = False  # Set to true for printing/debug during data extraction\n",
     "\n",
-    "OUTPUT_FOLDER = \"../dataset/kolumbus/output\"\n",
+    "OUTPUT_FOLDER = f\"../{KOLUMBUS_OUTPUT_FOLDER}\"\n",
     "RAW_DATA_FILE = \"../dataset/kolumbus/2023-09-04.csv\"\n",
     "\n",
     "NUMBER_OF_TRACES = 1000\n",
@@ -75,12 +77,20 @@
     "    RAW_DATA_FILE, usecols=[\"serviceJourney\",\n",
     "                            \"recordedAtTime\", \"longitude\", \"latitude\"]\n",
     ")\n",
+    "\n",
+    "#TODO - Decide on coordinates to use for kolumbus\n",
     "# Filtering the data\n",
+    "# filtered_df = raw_df[\n",
+    "#     (raw_df[\"latitude\"] >= 58.71)\n",
+    "#     & (raw_df[\"latitude\"] <= 59.02)\n",
+    "#     & (raw_df[\"longitude\"] >= 5.53)\n",
+    "#     & (raw_df[\"longitude\"] <= 5.85)\n",
+    "# ]\n",
     "filtered_df = raw_df[\n",
-    "    (raw_df[\"latitude\"] >= 58.71)\n",
-    "    & (raw_df[\"latitude\"] <= 59.02)\n",
-    "    & (raw_df[\"longitude\"] >= 5.53)\n",
-    "    & (raw_df[\"longitude\"] <= 5.85)\n",
+    "    (raw_df[\"latitude\"] >= K_MIN_LAT)\n",
+    "    & (raw_df[\"latitude\"] <= K_MAX_LAT)\n",
+    "    & (raw_df[\"longitude\"] >= K_MIN_LON)\n",
+    "    & (raw_df[\"longitude\"] <= K_MAX_LON)\n",
     "]\n",
     "# Deleting raw_df for performance reasons\n",
     "del raw_df\n",
@@ -158,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.6+"
   }
  },
  "nbformat": 4,
