--- a/processing/porto_clean_data.ipynb
+++ b/processing/porto_clean_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,35 +51,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from constants import P_MAX_LAT, P_MAX_LON, P_MIN_LAT, P_MIN_LON, PORTO_OUTPUT_FOLDER\n",
     "# Containning variables and constants for this spreadsheet\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
-    "OUTPUT_FOLDER = \"../dataset/porto/output/\"\n",
+    "OUTPUT_FOLDER = f\"../{PORTO_OUTPUT_FOLDER}\"\n",
     "RAW_DATA_FILE = \"../dataset/porto/porto_raw.csv\"\n",
-    "CLEAN_DATA_FILE = \"../dataset/porto/porto.csv\"\n",
+    "OUTPUT_DATA_FILE = \"../dataset/porto/porto.csv\"\n",
     "\n",
     "LOG = False  # Set to true for printing during data extraction\n",
     "\n",
-    "MAX_LON = -8.57\n",
-    "MIN_LON = -8.66\n",
-    "MAX_LAT = 41.19\n",
-    "MIN_LAT = 41.14\n",
+    "\n",
     "MIN_LEN = 40\n",
     "\n",
     "NUMBER_OF_TRACES = 3000\n",
     "MAX_DIST_BETWEEN_COORDINATES = 0.2  # Km\n",
     "\n",
-    "X = calculate_trajectory_distance([(MIN_LAT, MIN_LON), (MAX_LAT, MIN_LON)])\n",
-    "Y = calculate_trajectory_distance([(MIN_LAT, MIN_LON), (MIN_LAT, MAX_LON)])"
+    "X = calculate_trajectory_distance([(P_MIN_LAT, P_MIN_LON), (P_MAX_LAT, P_MIN_LON)])\n",
+    "Y = calculate_trajectory_distance([(P_MIN_LAT, P_MIN_LON), (P_MIN_LAT, P_MAX_LON)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +151,7 @@
     "        lon, lat = list(map(float, coordinate.split(\",\")))\n",
     "\n",
     "        # Outside bounded rectangle\n",
-    "        if (not (MIN_LAT <= lat <= MAX_LAT)) or (not (MIN_LON <= lon <= MAX_LON)):\n",
+    "        if (not (P_MIN_LAT <= lat <= P_MAX_LAT)) or (not (P_MIN_LON <= lon <= P_MAX_LON)):\n",
     "            if LOG:\n",
     "                print(trace_id, \"is outside bounded rectangle\")\n",
     "            break\n",
@@ -204,7 +202,7 @@
     "    \"POLYLINE\",\n",
     "]\n",
     "cleaned_df = pd.DataFrame(cleaned_trajectories, columns=cleaned_df_columns)\n",
-    "cleaned_df.to_csv(CLEAN_DATA_FILE, index=False)\n",
+    "cleaned_df.to_csv(OUTPUT_DATA_FILE, index=False)\n",
     "\n",
     "\n",
     "print(\"Number of cleaned trajectories written to file:\", counter)"
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.6+"
   },
   "vscode": {
    "interpreter": {
