--- a/schemes/lsh_disk.ipynb
+++ b/schemes/lsh_disk.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from constants import P_MAX_LON, P_MIN_LON,P_MAX_LAT,P_MIN_LAT,R_MAX_LON,R_MIN_LON,R_MAX_LAT,R_MIN_LAT,K_MAX_LON,K_MIN_LON,K_MAX_LAT,K_MIN_LAT, PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, KOLUMBUS_OUTPUT_FOLDER\n",
     "# Declaring global variables:\n",
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
@@ -48,24 +49,9 @@
     "OUTPUT_FOLDER_ROME = \"../hashed_data/disk/rome/\"\n",
     "OUTPUT_FOLDER_KOLUMBUS = \"../hashed_data/disk/kolumbus/\"\n",
     "\n",
-    "PORTO_DATA = \"../dataset/porto/output/\"\n",
-    "ROME_DATA = \"../dataset/rome/output/\"\n",
-    "KOLUMBUS_DATA = \"../dataset/kolumbus/output/\"\n",
-    "\n",
-    "P_MAX_LON = -8.57\n",
-    "P_MIN_LON = -8.66\n",
-    "P_MAX_LAT = 41.19\n",
-    "P_MIN_LAT = 41.14\n",
-    "\n",
-    "R_MAX_LON = 12.53\n",
-    "R_MIN_LON = 12.44\n",
-    "R_MAX_LAT = 41.93\n",
-    "R_MIN_LAT = 41.88\n",
-    "\n",
-    "K_MAX_LON = 5.80\n",
-    "K_MIN_LON = 5.70\n",
-    "K_MAX_LAT = 59.10\n",
-    "K_MIN_LAT = 58.85"
+    "PORTO_DATA = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
+    "ROME_DATA = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
+    "KOLUMBUS_DATA = f\"../{KOLUMBUS_OUTPUT_FOLDER}/\""
    ]
   },
   {
@@ -79,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +73,8 @@
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
     "    for filename in os.listdir(OUTPUT_FOLDER_ROME):\n",
+    "        if filename.startswith(\".gitkeep\"):\n",
+    "            continue\n",
     "        file_path = os.path.join(OUTPUT_FOLDER_ROME, filename)\n",
     "        try:\n",
     "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
@@ -99,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +96,7 @@
     "layers = 4\n",
     "diameter = 1.5\n",
     "num_disks = 50\n",
-    "meta_file = \"../dataset/rome/output/META-100.TXT\"\n",
+    "meta_file = f\"../{ROME_OUTPUT_FOLDER}/META-100.txt\"\n",
     "\n",
     "DiskRome = DiskLSH(\n",
     "    \"Rome D1\",\n",
@@ -126,7 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +160,8 @@
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
     "    for filename in os.listdir(OUTPUT_FOLDER_PORTO):\n",
+    "        if filename.startswith(\".gitkeep\"):\n",
+    "            continue\n",
     "        file_path = os.path.join(OUTPUT_FOLDER_PORTO, filename)\n",
     "        try:\n",
     "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
@@ -177,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +183,7 @@
     "layers = 4\n",
     "diameter = 1.5\n",
     "num_disks = 50\n",
-    "meta_file = \"../dataset/porto/output/META-100.TXT\"\n",
+    "meta_file = f\"../{PORTO_OUTPUT_FOLDER}/META-100.txt\"\n",
     "\n",
     "DiskPorto = DiskLSH(\n",
     "    \"Porto D1\",\n",
@@ -204,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,6 +239,8 @@
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
     "    for filename in os.listdir(OUTPUT_FOLDER_KOLUMBUS):\n",
+    "        if filename.startswith(\".gitkeep\"):\n",
+    "            continue\n",
     "        file_path = os.path.join(OUTPUT_FOLDER_KOLUMBUS, filename)\n",
     "        try:\n",
     "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +262,7 @@
     "layers = 4\n",
     "diameter = 1.5\n",
     "num_disks = 50\n",
-    "meta_file = \"../dataset/kolumbus/output/META-100.TXT\"\n",
+    "meta_file = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-100.txt\"\n",
     "\n",
     "DiskKolumbus = DiskLSH(\n",
     "    \"Kolumbus D1\",\n",
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.6+"
   }
  },
  "nbformat": 4,
